Hw4.1