@@ -73,6 +73,7 @@ class Task1Test {
     @Test
     void testGetKthOldestAnimal() {
         Animal result = Task1.getKthOldestAnimal(animals, 1);
+        assert result != null;
         assertEquals("Cat", result.getName());
     }
 
@@ -86,7 +87,7 @@ class Task1Test {
     @Test
     void testGetTotalPaws() {
         Integer result = Task1.getTotalPaws(animals);
-        assertEquals(18, result); // 4 + 4 + 2 + 0 + 8 = 18
+        assertEquals(18, result);
     }
 
     @Test
@@ -98,7 +99,7 @@ class Task1Test {
     @Test
     void testGetBitingAnimalsAbove100cm() {
         List<Animal> result = Task1.getBitingAnimalsAbove100cm(animals);
-        assertTrue(result.isEmpty()); // нет животных выше 100 см
+        assertTrue(result.isEmpty());
     }
 
     @Test
@@ -128,20 +129,20 @@ class Task1Test {
     @Test
     void testSortAnimalsByTypeSexName() {
         List<Animal> result = Task1.sortAnimalsByTypeSexName(animals);
-        assertEquals("Small Bird", result.get(0).getName()); // BIRD должна быть первой по алфавиту типов
+        assertEquals("Small Bird", result.getFirst().getName());
     }
 
     @Test
     void testDoSpidersBiteMoreThanDogs() {
         Boolean result = Task1.doSpidersBiteMoreThanDogs(animals);
-        assertFalse(result); // у нас одинаковое количество кусающихся пауков и собак
+        assertFalse(result);
     }
 
     @Test
     void testGetHeaviestFishInMultipleLists() {
         List<List<Animal>> multipleLists = Arrays.asList(
             animals,
-            Arrays.asList(new Animal("Big Fish", Animal.Type.FISH, Animal.Sex.M, 3, 10, 2, false))
+            List.of(new Animal("Big Fish", Animal.Type.FISH, Animal.Sex.M, 3, 10, 2, false))
         );
         Animal result = Task1.getHeaviestFishInMultipleLists(multipleLists);
         assertEquals("Big Fish", result.getName());
@@ -150,13 +151,10 @@ class Task1Test {
     @Test
     void testInvalidAnimals() {
         Animal invalidAnimal = new Animal("", Animal.Type.CAT, Animal.Sex.M, -1, -5, -5, false);
-        List<Animal> testAnimals = Arrays.asList(invalidAnimal);
 
-        // Проверяем наличие ошибок валидации
         Set<ValidationError> errors = Task1.validateAnimal(invalidAnimal);
         assertFalse(errors.isEmpty());
 
-        // Проверяем конкретные ошибки
         boolean hasNameError = errors.stream()
             .anyMatch(e -> e.getFieldName().equals("name") &&
                 e.getMessage().equals("Name cannot be empty"));
